@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Aug 29, 2023 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Sep 05, 2023 --" />
 
         <property name="assemblies"><!-- file system location for files for given assembly: must be the same as found in '/ref/fasta' directory -->
             <map>
@@ -351,6 +351,17 @@
         </property>
     </bean>
 
+    <bean id="phenotypicVariantManager" class="edu.mcw.rgd.gff3.CreateGff4PhenotypicVariants">
+        <property name="outDir" value="Variants/Phenotypic Alleles Variants"/>
+        <property name="processedMapKeys">
+            <list>
+                <value>372</value>  <!-- rn7 -->
+                <value>360</value>  <!-- rn6 -->
+                <value>70</value>  <!-- rn5 -->
+                <value>60</value>  <!-- rn4 -->
+            </list>
+        </property>
+    </bean>
 </beans>
 
 
